syntax = "proto3";

package restaurant.events;

option csharp_namespace = "RestaurantService.Presentation.Kafka.Protos.Events";

import "google/protobuf/timestamp.proto";

message DishUpdatedKey {
  int64 dish_id = 1;
}

message DishUpdatedEvent {
  string event_id = 1;
  int64 dish_id = 2;
  int64 restaurant_id = 3;
  int64 dish_price = 4;
  bool dish_availability = 5;
}